# amharic-e-commerce-data-extractor

./: .gitignore  CLEANUP_COMPLETE.md  MIT.md  NAMING_UPDATE_COMPLETE.md  README.md  RESTRUCTURE_COMPLETE.md  fix_visualization.py  main.py  pyproject.toml  requirements.txt  setup.py  setup_project.py
.github/workflows/: unittests.yml
data/conll_labeled/: amharic_ecommerce_conll.txt  labeling_statistics.json  validation_report.json
data/vendor_analytics/: approved_loans_20250622_1648.csv  executive_report_20250622_1648.txt  lending_scorecard.csv  vendor_analytics_20250622_1648.json
docs/: README.md  Task3.md  Task4.md  Task5.md  Task6.md  report.md
notebook/: 01_setup_and_config.ipynb  02_amharic_processing.ipynb  03_multi_channel_scraping.ipynb  06_data_visualization.ipynb  06_data_visualization_backup.ipynb  07_historical_data_collection.ipynb  Task2_CoNLL_Labeling.ipynb
notebooks/: 04_data_processing.ipynb  05_export_and_analysis.ipynb  06_data_visualization.ipynb  06_data_visualization_clean.ipynb  Model_Comparison.ipynb  Model_Interpretability.ipynb  NER_Fine_Tuning.ipynb  NOTEBOOKS_README.md  Vendor_Scorecard.ipynb
scripts/: demo_task3_training.py  run_task1.py  run_tasks_3_4_5.py
src/: __init__.py
src/analytics/: __init__.py  data_loader.py  entity_extraction.py  export_system.py  risk_assessment.py  vendor_metrics.py  visualization.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  message.py
src/pipeline/: __init__.py  data_ingestion.py
src/preprocessing/: __init__.py
src/services/: __init__.py  telegram_scraper.py
(+7 files in other folders)
